login bg image changed
and top navs links completed for all pages

--- a/class project ui/cat.html
+++ b/class project ui/cat.html
@@ -56,7 +56,7 @@
 							</li>
 
 						<li class="nav-item"><a class="nav-link" href="contact.html"> تماس با ما</a>
-						<li class="nav-item"><a class="nav-link" href="contact.html">ورود</a></li>
+						<li class="nav-item"><a class="nav-link" href="login.html">ورود</a></li>
 					</ul>
 				</div>
 			</div>
