--- a/class project ui/single-blog.html
+++ b/class project ui/single-blog.html
@@ -43,7 +43,7 @@
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu-nav ml-auto">
 						<li class="nav-item active"><a class="nav-link" href="index.html">صفحه نخست</a></li>
-						<li class="nav-item"><a class="nav-link" href="cat.html"> دسته بندی ها</a>
+						<li class="nav-item"><a class="nav-link" href="cat.html">دسته بندی ها</a>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">بلاگ</a>
 								<ul class="dropdown-menu">
@@ -51,8 +51,9 @@
 									<li class="nav-item"><a class="nav-link" href="viewmore.html"> مقالات</a></li>
 								</ul>
 							</li>
+
 						<li class="nav-item"><a class="nav-link" href="contact.html"> تماس با ما</a>
-						<li class="nav-item"><a class="nav-link" href="contact.html">ورود</a></li>
+						<li class="nav-item"><a class="nav-link" href="login.html">ورود</a></li>
 					</ul>
 				</div>
 			</div>
