--- a/class project ui/viewmore.html
+++ b/class project ui/viewmore.html
@@ -31,7 +31,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
 				<!-- Brand and toggle get grouped for better mobile display -->
-				<a class="navbar-brand logo-h" href="index.html" style="margin-right: -5%;margin-top: -5%;"><img src="pics/logo.png" alt=""></a>
+				<a class="navbar-brand logo-h" href="index.html" style="margin-right: -5%;"margin-top: -5%;"><img src="pics/logo.png" alt=""></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -41,17 +41,17 @@
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu-nav ml-auto">
 						<li class="nav-item active"><a class="nav-link" href="index.html">صفحه نخست</a></li>
-						<li class="nav-item"><a class="nav-link" href="#feature">مطالب</a></li>
 						<li class="nav-item"><a class="nav-link" href="cat.html">دسته بندی ها</a>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">بلاگ</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="blog.html">پست ها</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html"> مقالات</a></li>
+									<li class="nav-item"><a class="nav-link" href="viewmore.html"> مقالات</a></li>
 								</ul>
 							</li>
+
 						<li class="nav-item"><a class="nav-link" href="contact.html"> تماس با ما</a>
-						<li class="nav-item"><a class="nav-link" href="contact.html">ورود</a></li>
+						<li class="nav-item"><a class="nav-link" href="login.html">ورود</a></li>
 					</ul>
 				</div>
 			</div>
@@ -70,7 +70,7 @@
 					<br>
                     <br>
                     <br>
-					<h2>ایده تحقیقاتب داری و نمیدونی چجوری عملیش؟ </h2>
+					<h2>ایده تحقیقاتی داری و نمیدونی چجوری عملیش؟ </h2>
 					
 				<p style="color: #230B34;font-size: 15px;"> با ما درتماس باش  و از بهترین اساتید دانشگاه شهید باهنر راهنمایی بگیر!</p>
 					<a class="banner-btn" href="#"; > تماس باما</a>
